Include formatted documentation into the repo

--- a/haskell-example.tex
+++ b/haskell-example.tex
@@ -300,7 +300,7 @@ $3$ and $4$, but not in the second.  Details are provided in \emph{The
 
 \section{BSD3}
 
-The Haskell mode is available under a BSD3 license.
+The Haskell style is available under a BSD3 license.
 
 \bibliographystyle{alpha}
 \bibliography{haskell-example}
