Bit of polish in the docs

--- a/haskell-example.tex
+++ b/haskell-example.tex
@@ -38,9 +38,9 @@
 
 \section{What's it good for?}
 
-Setting large pieces of code in an \texttt{verbatim} is ugly and makes it
-difficult to uses subscripts or set comments in a proportional type face.  On
-the other hand, the use of, for example, \TeX's math mode requires the use of
+Setting large pieces of code in \texttt{verbatim} is ugly and complicates
+the use of subscripts or to set comments in a proportional type face.  On
+the other hand, the use of \TeX's math mode requires 
 additional macros to achieve proper kerning in multi-letter identifiers and to
 typeset application by juxtaposition.  The \texttt{haskell} style provides
 environments and macros that simplify setting Haskell~\cite{haskell,haskell14}
